k8s/infrastructure/controllers/argocd/http-route-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-webhook
  namespace: argocd
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - argocd.smadja.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/webhook
      backendRefs:
        - name: argocd-server
          port: 80
