k8s/infrastructure/controllers/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - argocd.smadja.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
